xboxdrv 0.6.4 - (13/Jan/2011)
=============================

* fixed bug that disabled all axis when a button was pressed
* fixed some missing include


xboxdrv 0.6.3 - (10/Jan/2011)
=============================

* chatpad support (still rough), special thanks to Jani Virta, Andy
  Kirkham, dwomac and GAFBlizzard who helped make it possible
* added  --chatpad, --chatpad-no-init and --chatpad-debug
* added --headset, --headset-dump FILE and --headset-play FILE, for
  experimentation only
* added optional abs:/rel:/key: prefixes to --ui-axismap
* added input filters for --axismap and --buttonmap
* fixed multiple bugs that made it impossible to assign events to
  specific devices
* fixed axis getting stuck when using a shift key
* fixed incorrect error handling on fork()/exec()


xboxdrv 0.6.2 - (31/Dec/2010)
=============================

* merged Xbox360 guitar handling into the regular Xbox360 controller
  handling, use --guitar to get the old mapping back
* added generic event filter framework
* added toggle button filter
* added invert button filter
* added auto fire button filter
* added log filter for button and axis
* added invert axis filter
* added sensitivity axis filter
* added relative axis filter
* added response curve axis filter
* added deadzone axis filter
* added calibration axis filter
* added ability to send different events depending on how long a
  button was pressed
* added ability to launch a program on button press
* added ability to replay a macro on a button press
* added ability to launch a child program from within xboxdrv, making
  wrapper scripts easier to write without race conditions
* added --option NAME=VALUE to allow INI-style config options from
  command line
* added --evdev-debug to print out all received events from evdev
* added --evdev-no-grab to avoid a full grab on the event device
* unified ini and command line parsing some more
* Mad Catz Xbox controller - MW2 controller support added