@@ -139,7 +139,7 @@ Xbox360Controller::find_endpoints()
     throw std::runtime_error("-- failure --"); // FIXME
   }
 
-  bool debug_print = true;
+  bool debug_print = false;
 
   // FIXME: no need to search all interfaces, could just check the one we acutally use
   for(const libusb_interface* interface = config->interface;
