@@ -1,3 +1,9 @@
+xboxdrv 0.6.5 - (??/Jan/2011)
+=============================
+
+* switched to libusb-1.0
+
+
 xboxdrv 0.6.4 - (13/Jan/2011)
 =============================
 
